@@ -1,3 +1,4 @@
+ * Fixes #200: "LimitRequestFields 0" now disables the limit, as documented.
  * Fixes #201: do not count repeated headers with same name against the field
    count limit. The are merged internally, as if sent in a single HTTP/1 line.
  * Refrain from detecting (intermediate) responses, when the connection has
